--- a/content/posts/2023/20230401.md
+++ b/content/posts/2023/20230401.md
@@ -11,6 +11,7 @@ menu:
     name: Basic Elements
     weight: 4
 slug: 1838
+draft: true
 ---
 
 Zscaler の「Private Access」や「Internet Security」の項目が “Internal Error” や “Conneccting…” と表示され、一向にVPN接続ができない現象が起きました。
