--- a/content/posts/2019/2019-04-19.md
+++ b/content/posts/2019/2019-04-19.md
@@ -1,123 +1,28 @@
 ---
-title: 【WordPress】メンバーの一覧ページの作成
+title: 【Winodws】MinionHost.exeとは
 date: 2019-04-19
 categories:
-- "Programming"
+- "その他"
 tags: [
-"Wordpress",
+"Windows",
 ]
 menu:
   main:
     name: Basic Elements
     weight: 4
-slug: 566
+slug: 1770
 ---
 
-とりあえず、サークルっぽいもののサイトをWordpressでサクッと作ろうとしたものの、一番肝心なメンバーの一覧ページの作成に結構手こずりました。
+おそらく多くの場合は株式会社日立システムズの[Cybereason（サイバーリーズン）](https://www.hitachi-systems.com/solution/t01/shield/cybereason.html)というセキュリティソフトに関連した実行ファイルです。
 
-基本的にメンバーとかユーザーの一覧ページの生成ってWordpressにないみたいで、あるものは結構お高いテーマだったりします。
+タスクマネージャーから「MinionHost」のプロセスを選択して右クリックし、「ファイルの場所を開く(O)」を選択すると、minionhost.exeがあるディレクトリ（フォルダー）が表示されます。
 
-しかし、ここはなんとか無料の中でも最強のCocoonでなんとかしたいところ。
+このディレクトリ名が「Cybereason ActiveProbe」となっていました。
 
-というわけで、なんとかしました。
+### 後書き
 
-※**9/26使ったソースファイルのリンクを貼りました。**
+なんかこいつメモリ食うなって調べてみたらセキュリティソフトでした。
 
-## どうアプローチしていくか
+ただ、このお陰でタスクマネージャから実行ファイルの場所を開けることがわかったのはいい勉強でした。
 
-Googleさんに「Wordpress メンバー一覧」とかで調べてるとだいたい二種類の方法が出てきます。
-
-#### 1\. カスタム投稿を使う方法
-
-下のサイトに紹介されてあるような方法ですね。
-
-[WordPressのカスタム投稿タイプでメンバー紹介ページを作成](https://www.webcreatorbox.com/tech/custom-post-type "WordPressのカスタム投稿タイプでメンバー紹介ページを作成")
-
-投稿感覚で追加できていいなと思い、最初はこの方法で作成していました。
-
-しかし少し問題が発生。
-
-このページのコードをコピペしてあげればそれとなく完成するのですが、テーマとの相性がどうもあるらしく、デザイン（CSS）を書かないとテンプレのような綺麗な表示にはならないなと。
-
-そこで諦めて次のアプローチを採用しました。
-
-#### 2\. ユーザーの一覧を取得して表示
-
-WordPressは管理者の他に第三者をユーザーとして登録することができます。
-
-記事の作成者がバラバラなブログもよくありますよね。
-
-どうせ、みんな自分のプロフィールは自分で編集したいだろうし、そうなるとWordpress上に登録せざるを得ないのでむしろこっちでいい気がしてきた。
-
-というわけで下のサイトを参考にコードを作成していきました。
-
-[プラグイン不要！固定ページで投稿者の一覧リストを表示させる - 株式会社bridge](https://bge.jp/page-writer-archive/ "プラグイン不要！固定ページで投稿者の一覧リストを表示させる - 株式会社bridge")
-
-このサイトが一番役に立ったのではないでしょうか….
-
-デザインに関してはそのまま使ってもよかったのですが、このサイトのようなデザインだと人数が少ない時にページが寂しくなりそう…
-
-ということでさらに改良！
-
-## Cocoon の著者紹介テンプレの構造を利用
-
-下のサイトで作成者の わいひら さんが紹介してます
-
-[プロフィール画像やプロフィール情報、SNSページを設定する方法](https://wp-cocoon.com/profile-settings/ "プロフィール画像やプロフィール情報、SNSページを設定する方法")
-
-要するに下のような表示が利用できたらこの上ないなと（CSSもほぼ書かなくていいので）
-
-![](https://lh3.googleusercontent.com/VQSOEPoRzCfYlc78gwlR4M_OIPGLt8mQyniqJLnzTCbDWpc6zcNZZviwi9ApO7ExesMZJ4HfajxtlaWF7u0iNrhkfQ6FQT1a12SLzh7PCNLzpyHKwjGZHv-hnbiTk8-zStrUEDr1w0-6dDU2lu4yJ6WJ7Dhe3sbBpXfWDb4odLiWZZMstnJ2qceL8IynxGwnbBIoL7vYnR7RFyy8y2LQOSNWHoxgDMW_LDK9kgOjCO1PqfWrt7i2nnqLjEOJKhneTj7aFbGEfH5wMAqJfqDOMNnodiKEAlckejEKcJh9tT9ICnEoDX7Akla4SDSFCBWYBQhWOcDu0-ObsX9PSvu0nRDuOAc-OBs6YtRzcZWTVShU0d01QMvF7s_TseMcRJMo8_rIVRrroHc7vlZp4jolKCx5f8fcuV3PzBK7Sl0w6bnpVG6Ir-jkg7sRhgAc-DINQNYc_LuUtWQ59Z5s04GxXNb9Dum3jci6YTgrddXyCo_aA1GKuHZiCyWjLIPE_bKN61oLlya0d27XTPZ7KAcKZ5RB7bHAu0V_DkFnNrlk9jXkaHeJlHEQMDWZp-yw-1CSS6nmtFFDeKMAq1Z7rvyhCSxcOMgOv-uiTJ_TMGXUcAPGmXGFa5btHw8ph_K63sKf_AaJ6FFkgqBiO_HSfRtjBhhkyOE0viQ=w881-h193-no)
-
-## 完成形
-
-こんな感じに↓
-
-![](https://lh3.googleusercontent.com/Zl-CY9CjJo36vcMUUaMgCKWsCB2XBdjxY5rQn4NWgZGil2JSRkhaoY8f2zPBRKPuk4djs0-6yjR8ro8TW6wW4qQCE-Qqbf_cgxT8kB4iSPQNI9Kp4wk-XrlYumpJB6VTpJxGhF6e3ZWAtJ0W480ChzRQ3cygdSYC73QDIe7Fkblu43Bby9IeLXIf-O6mdCVeswuanvO63_zAjhJ2fmKMXzDhtyXDaX5YzIOhViJC4v7NhZK5SbPjLxKrzsx1ItF1G7sgDWscio90bm2VJgMfrsrysgxVWW5dAS_XDU_-aT8JmqSl-yBJPon5Q1_C2fvdLUeLdNw_cBSKY01VzQKT17SGRwW6A1bWK9bmHuURGK52W1URmWrP-XwliVpMmCyRUam-U8Hxj2C25P2IVwlwoFzP4_FN2vWcEGCq9e5o1WC0mOSxw4KDeojbk_bi8RFGerbpFRw2XZjK5s-G70DxXepQHRJVu_RVbqhoWXvXK4ZjYxKTrYqxxDlJGYxuAayJN3Rsfwa1rw64JpmAXJx9ORje2lNhnuV4yT2mjl_TMW9CP4rqDAwBt5BZz_xADoCdmJ5xrHzmgdw1omcRClVK_5v0rh-dT0cDzyjNVX0cjNIblznXnS1VkxiN_70pCvavwayUn9JdicEPz6eEk1XaR5ifK1GyZIE=w1177-h567-no)
-
-十分ですね！！（妥協感）
-
-これなら個人のページを改めて作らなくても一覧が作成できるし最高なのでは…  
-（個人のページを作ってリンクを飛ばすことももちろんできます。）
-
-## 参考にしたサイト
-
-#### 1\. [https://bge.jp/page-writer-archive/](https://bge.jp/page-writer-archive/)
-
-最初ら変にも紹介したこのサイト。PHPと、データベースからのユーザー情報の取得方法を教えてもらいました。
-
-[プラグイン不要！固定ページで投稿者の一覧リストを表示させる - 株式会社bridge](https://bge.jp/page-writer-archive/ "プラグイン不要！固定ページで投稿者の一覧リストを表示させる - 株式会社bridge")
-
-#### 2\. [WordPress Codex 日本語版](https://wpdocs.osdn.jp/%E3%83%86%E3%83%B3%E3%83%97%E3%83%AC%E3%83%BC%E3%83%88%E3%82%BF%E3%82%B0/the_author_meta)
-
-値を取ってくるときのタグの基本的な命名がこのページでわかります。
-
-[テンプレートタグ/the author meta - WordPress Codex 日本語版](https://wpdocs.osdn.jp/%E3%83%86%E3%83%B3%E3%83%97%E3%83%AC%E3%83%BC%E3%83%88%E3%82%BF%E3%82%B0/the_author_meta "テンプレートタグ/the author meta - WordPress Codex 日本語版")
-
-#### 3\. [ホワイトベアー](https://whitebear-seo.com/wordpress-add-user-profile/)
-
-新しくユーザー情報を追加するとき参考になりました。  
-デフォルトだけでは足りない情報（Soundcloud\_URL とか）を追加したかったので助かりました。
-
-[WordPressでユーザープロフィールの項目を新たに追加する方法！管理画面の投稿者情報をカスタマイズする](https://whitebear-seo.com/wordpress-add-user-profile/ "WordPressでユーザープロフィールの項目を新たに追加する方法！管理画面の投稿者情報をカスタマイズする")
-
-#### 4\. [Asial Developers Blog](https://blog.asial.co.jp/1153)
-
-どうしてもFont Awesomeだけでは足りないアイコン画像をボタンにくっつけるCSSを作成する時に参考にしました。
-
-<iframe title="CSSだけで作るアイコン付きボタンの作り方 - アシアルブログ" src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fblog.asial.co.jp%2F1153" class="embed-card embed-blogcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;"></iframe>
-
-
-
-
-ざっとこんな感じかな。他にもちょくちょく見たけど大きく役に立ったのはこれらのサイトでした。
-
-## まとめ
-
-初めてPHPを触りました。
-
-楽しかったです。
-
-今回作ったphpソースファイルはGithub上に公開しておきます。  
-参考にして見てください！  
-[https://github.com/KanoeGitHub/Wordpress-Custom](https://github.com/KanoeGitHub/Wordpress-Custom)
+もし、実行ファイルがProgramFilesに直に置かれていたり、別の場所にあったりなど、怪しい場所にある場合はもしかしたらマルウェアかもしれませんしね。（MinionHostについても同様で）
