--- a/content/posts/2019/2019.md
+++ b/content/posts/2019/2019.md
@@ -1,15 +1,15 @@
 ---
-title: FPSゲームと通信環境の見直し
-date: 2019-03-01
+title: 低域は聞こえるかい？
+date: 2019-02-12
 categories:
-- "ゲーム"
+- "DTM"
 tags: [
-"雑談",
+"機材",
 ]
 menu:
   main:
     name: Basic Elements
     weight: 4
-slug: 1279
+slug: 111
 draft: true
 ---
