--- a/content/posts/2024/2024-10-20.md
+++ b/content/posts/2024/2024-10-20.md
@@ -14,20 +14,36 @@ slug: 241020
 ---
 
 J:COM のCATV回線を数ヶ月使用してみた感想です。  
-結果としては、普段使いは問題ないかなと言った程度です。
+結論から言うと、「普段使いには問題ない」といったところです。
 
-回線情報に明るい方々はご存知の通り、このCATV回線を用いたネット回線、
-下りは250mbps出ますが、上りは**10mbps**しか出ません。
+## 回線速度について
+まず、このCATV回線の特徴ですが、ダウンロード速度は最大で250Mbps出るものの、アップロード速度は最大でも10Mbpsしか出ません。  
+ネット回線に詳しい方であれば、この「上り」の速度がどれだけ重要かはお分かりかと思います。  
+特に、クラウドに大量のデータをアップロードしたり、動画を配信したりする場合は、10Mbpsという速度ではかなり厳しい状況になるでしょう。
 
-なぜこの回線を契約したのかというと、現在の住居に入るにつき、入居日からすぐに使えたからです。
-（物件の都合上、電話線orCATVしか使用できず、光回線を入れるには工事が必要ですが、管理会社との調整も必要になるため、間に合わない可能性がありました）
+ただ、私の用途では、今のところ大きな不満はありません。  
+というのも、リモートワークやオンライン会議、スマホでの動画視聴、ゲーム（Apexなど）といった使い方をしていて、アップロードが重要になるシーンが少ないからです。
 
-ただ、現在まで使用していますが、特に大量のファイルをアップロードする作業もないので、問題なく使用できています。
+## 選んだ理由
+そもそも、なぜこの回線を選んだのか？   
+それには事情があります。  
+現在住んでいる物件の都合で、選べる回線が限られていました。  
+光回線を引く場合、工事が必要で、さらに管理会社との調整も必要だったため、入居日に間に合わない可能性がありました。  
+その点、J:COMのCATV回線は、入居日からすぐに使えるという利点があったため、これを選ぶことにしました。  
+つまり、**回線のスペックというよりも、利便性を重視した結果です **。
 
-【主な使用用途】
-- リモートワーク （オンライン会議を含む）
-- ゲーム（Apexなど）
-- スマホでの動画視聴
+## 実際の使用感
+さて、数ヶ月使ってみた感想ですが、やはりダウンロード速度は問題なく、YouTubeやNetflixでの動画視聴も快適に行えます。  
+リモートワークでのオンライン会議もスムーズに行えており、特に遅延や途切れを感じることはほとんどありません。  
+ゲームに関しても、ApexなどのFPSゲームをプレイしていますが、今のところ大きなラグや不具合もなく、快適に遊べています。  
 
-ただまぁ、上りが10mbpsしか出ないことは、契約説明の時に聞いてないので、そこは教えて欲しかったなぁ...
+ただし、大量のデータをアップロードする必要がある場合や、ストリーミング配信などを頻繁に行う方には、この回線の「上り10Mbps」というスペックは、少々厳しいかもしれません。  
+私自身、そういった用途が少ないため、不便さを感じることはほとんどないのですが、今後もしクラウドベースの作業が増えるとなると、少し考え直す必要があるかもしれません。
+
+## あとがき
+最後にひとつ、少し残念に思った点を挙げておきます。  
+それは、「上り速度が10Mbpsしか出ない」という説明が、契約時にされなかったことです。  
+ダウンロード速度が320Mbps（ベストエフォート）という数字は強調されていましたが、アップロード速度についてはほとんど触れられていませんでした。  
+もし、この点を最初に知っていれば、もう少し考えたかもしれません。  
+上りの速度も重要だと感じる方は、契約時にしっかり確認することをおすすめします。
 
