拡張子変更

--- a/content/posts/2025/2025-03-11.md
+++ b/content/posts/2025/2025-03-11.md
@@ -38,7 +38,7 @@ slug: 20250311
 1. 左⌘  
   ``` 
   {
-    "description": "grave_accent_and_tilde をコマンドキーとして使用 (シフト併用含む)",
+    "description": "grave_accent_and_tilde をコマンドキーとして使用",
     "manipulators": 
     [
       {
@@ -55,7 +55,7 @@ slug: 20250311
 2. 英数 
   ``` 
   {
-    "description": "japanese_pc_nfer　を英数キーとして使用 (シフト併用含む)",
+    "description": "japanese_pc_nfer　を英数キーとして使用",
     "manipulators": 
     [
       {
@@ -72,7 +72,7 @@ slug: 20250311
 3. かな
   ```
   {
-    "description": "japanese_pc_xfer をかなキーとして使用 (シフト併用含む)",
+    "description": "japanese_pc_xfer をかなキーとして使用",
     "manipulators": 
     [
       {
@@ -89,7 +89,7 @@ slug: 20250311
 4. かな
   ```
   {
-    "description": "japanese_pc_katakana を右コマンドキーとして使用 (シフト併用含む)",
+    "description": "japanese_pc_katakana を右コマンドキーとして使用",
     "manipulators": [
       {
         "from": {
