--- a/content/posts/2025/2025-03-11.md
+++ b/content/posts/2025/2025-03-11.md
@@ -24,9 +24,9 @@ slug: 20250311
 
 しかし、個人的にはこの打鍵感やサイズ感が好きなので、なんとかして使用したいと思いました。
 
-調べると、[**Karabiner**](https://happyhackingkb.com/jp/products/discontinued/hhkb_lite2mac/)というアプリが使えそうでした。
+調べると、[**Karabiner**](https://karabiner-elements.pqrs.org/)というアプリが使えそうでした。
 
-[**Karabiner**](https://happyhackingkb.com/jp/products/discontinued/hhkb_lite2mac/)を使用すると、現在キーに割り当てられているコードが分かります。  
+[**Karabiner**](https://karabiner-elements.pqrs.org/)を使用すると、現在キーに割り当てられているコードが分かります。  
 また、そこで判明したコードをもとに、別のキーへの再割り当てを行うことが可能です。
 
 インストールや、導入方法は割愛します。  
