--- a/content/posts/2025/2025-03-11.md
+++ b/content/posts/2025/2025-03-11.md
@@ -13,103 +13,120 @@ menu:
 slug: 20250311
 ---
 
-[HHKB Lite2 for Mac](https://happyhackingkb.com/jp/products/discontinued/hhkb_lite2mac/) はすでにサポートが切れており、最新のOSには対応していません。
+[HHKB Lite2 for Mac](https://happyhackingkb.com/jp/products/discontinued/hhkb_lite2mac/) はすでにサポートが終了しており、最新の macOS では一部のキーが正常に動作しません。  
+私の場合は、M4 Mac mini の導入にあたり、この問題に直面しました。   
 
-そのため、一部のキーが想定外の動作を起こしていました。
+しかし、HHKB Lite2 の打鍵感やサイズ感が気に入っているため、なんとかして使い続けたいと考えました。
 
-- 左⌘ : なぜか ` や ~ が出る
-- 英数 : 反応なし
-- かな : 反応なし
-- 右⌘ : 反応なし
+## キーの不具合
 
-しかし、個人的にはこの打鍵感やサイズ感が好きなので、なんとかして使用したいと思いました。
+以下のキーが想定外の動作をしていました。
 
-調べると、[**Karabiner**](https://karabiner-elements.pqrs.org/)というアプリが使えそうでした。
+- **左⌘** ： ` や ~ が入力される
+- **英数** ： 反応なし
+- **かな** ： 反応なし
+- **右⌘** ： 反応なし
 
-[**Karabiner**](https://karabiner-elements.pqrs.org/)を使用すると、現在キーに割り当てられているコードが分かります。  
-また、そこで判明したコードをもとに、別のキーへの再割り当てを行うことが可能です。
+## 解決策：Karabiner-Elements を使用
 
-インストールや、導入方法は割愛します。  
+調べた結果、[**Karabiner-Elements**](https://karabiner-elements.pqrs.org/) を使うことで、キーのマッピングを変更できることが分かりました。
 
-設定には、`Complex Modifications`を使用します。  
+### Karabiner-Elements とは？
 
-`Add own rule`を使用して、以下の四つの設定を加えました。
+Karabiner-Elements は macOS 向けのキーカスタマイズツールで、
 
-1. 左⌘  
-  ``` 
-  {
-    "description": "grave_accent_and_tilde をコマンドキーとして使用",
-    "manipulators": 
-    [
-      {
-        "from": {
-          "key_code": "grave_accent_and_tilde",
-          "modifiers": { "optional": ["any"] }
-        },
-        "to": [{ "key_code": "left_command" }],
-        "type": "basic"
-      }
-    ]
-  }
-  ```
-2. 英数 
-  ``` 
-  {
-    "description": "japanese_pc_nfer　を英数キーとして使用",
-    "manipulators": 
-    [
-      {
-        "from": {
-          "key_code": "japanese_pc_nfer",
-          "modifiers": { "optional": ["any"] }
-        },
-        "to": [{ "key_code": "japanese_eisuu" }],
-        "type": "basic"
-      }
-    ]
-  }
-  ```
-3. かな
-  ```
-  {
-    "description": "japanese_pc_xfer をかなキーとして使用",
-    "manipulators": 
-    [
-      {
-        "from": {
-          "key_code": "japanese_pc_xfer",
-          "modifiers": { "optional": ["any"] }
-        },
-        "to": [{ "key_code": "japanese_kana" }],
-        "type": "basic"
-      }
-    ]
-  }
-  ```
-4. 右⌘
-  ```
-  {
-    "description": "japanese_pc_katakana を右コマンドキーとして使用",
-    "manipulators": [
-      {
-        "from": {
-          "key_code": "japanese_pc_katakana",
-          "modifiers": { "optional": ["any"] }
-        },
-        "to": [{ "key_code": "right_command" }],
-        "type": "basic"
-      }
-    ]
-  }
-  ```
+- 現在のキー割り当てを確認できる
+- キーの動作を自由に変更できる
 
-`"modifiers": { "optional": ["any"] }`を追加することで、SHIFTを押しながらの場合でも、同様に変更が適用されます。
+といった機能を備えています。
 
-これでまたしばらくは[HHKB Lite2 for Mac](https://happyhackingkb.com/jp/products/discontinued/hhkb_lite2mac/) が使用できます。
+### 設定方法
 
-助かりました。
+インストールや基本的な導入方法については省略します。
 
-#### あとがき
+設定には **Complex Modifications** を使用します。
+
+1. **Karabiner-Elements を開く**
+2. **Complex Modifications タブに移動**
+3. **「Add own rule」から以下の設定を追加**
+
+### キーマッピング設定
+
+以下の設定を JSON 形式で追加します。
+
+#### 左⌘ を正常にする
+
+```json
+{
+  "description": "grave_accent_and_tilde をコマンドキーとして使用",
+  "manipulators": [
+    {
+      "from": { "key_code": "grave_accent_and_tilde", "modifiers": { "optional": ["any"] } },
+      "to": [{ "key_code": "left_command" }],
+      "type": "basic"
+    }
+  ]
+}
+```
+
+#### 英数キーを有効化
+
+```json
+{
+  "description": "japanese_pc_nfer を英数キーとして使用",
+  "manipulators": [
+    {
+      "from": { "key_code": "japanese_pc_nfer", "modifiers": { "optional": ["any"] } },
+      "to": [{ "key_code": "japanese_eisuu" }],
+      "type": "basic"
+    }
+  ]
+}
+```
+
+#### かなキーを有効化
+
+```json
+{
+  "description": "japanese_pc_xfer をかなキーとして使用",
+  "manipulators": [
+    {
+      "from": { "key_code": "japanese_pc_xfer", "modifiers": { "optional": ["any"] } },
+      "to": [{ "key_code": "japanese_kana" }],
+      "type": "basic"
+    }
+  ]
+}
+```
+
+#### 右⌘ を正常にする
+
+```json
+{
+  "description": "japanese_pc_katakana を右コマンドキーとして使用",
+  "manipulators": [
+    {
+      "from": { "key_code": "japanese_pc_katakana", "modifiers": { "optional": ["any"] } },
+      "to": [{ "key_code": "right_command" }],
+      "type": "basic"
+    }
+  ]
+}
+```
+
+### SHIFT キーとの併用
+
+上記の設定では、`"modifiers": { "optional": ["any"] }` を追加することで、SHIFT キーを押しながらの入力にも対応できるようにしています。
+
+## まとめ
+
+この設定を適用することで、HHKB Lite2 for Mac を macOS の最新バージョンでも問題なく使えるようになりました。
+
+HHKB の独特な打鍵感とコンパクトなサイズ感を維持しつつ、快適に作業ができるので満足しています。
+
+## あとがき
+
 M4 Mac mini、とても小さくて良きです。
 
-良きかな...
+良きかな…
+
