ファイル整理

--- a/content/posts/2020/2020-05-24.md
+++ b/content/posts/2020/2020-05-24.md
@@ -11,6 +11,7 @@ menu:
     name: Basic Elements
     weight: 4
 slug: 1241
+draft: true
 ---
 
 普段動画作成しない方でも Twitter や Instagram, LINE などで投稿するための短い動画（ショートムービー）を作成したいと思う方は多いと思います。
