ファイル整理

--- a/content/posts/2024/2024-10-20.md
+++ b/content/posts/2024/2024-10-20.md
@@ -1,5 +1,5 @@
 ---
-title: JCOMのCATV回線を使用している感想
+title: CATV回線を使用している感想
 date: 2024-10-20
 categories:
 - "その他"
@@ -13,7 +13,7 @@ menu:
 slug: 241020
 ---
 
-J:COM のCATV回線を数ヶ月使用してみた感想です。  
+CATV回線を数ヶ月使用してみた感想です。  
 結論から言うと、「普段使いには問題ない」といったところです。
 
 ## 回線速度について
@@ -29,7 +29,7 @@ J:COM のCATV回線を数ヶ月使用してみた感想です。
 それには事情があります。  
 現在住んでいる物件の都合で、選べる回線が限られていました。  
 光回線を引く場合、工事が必要で、さらに管理会社との調整も必要だったため、入居日に間に合わない可能性がありました。  
-その点、J:COMのCATV回線は、入居日からすぐに使えるという利点があったため、これを選ぶことにしました。  
+CATV回線はたまたますでに工事済みであり、入居日からすぐに使えるという利点があったため、これを選ぶことにしました。  
 つまり、**回線のスペックというよりも、利便性を重視した結果です**。
 
 ## 実際の使用感
