--- a/content/posts/2025/2025-05-11.md
+++ b/content/posts/2025/2025-05-11.md
@@ -25,9 +25,9 @@ Chrome Web Store: https://chromewebstore.google.com/detail/gihcgmefokbbpmchkeihm
 ![](https://lh3.googleusercontent.com/dtv3ZghOtm9HMvGZY5EyfXh3-FlxF28PGqZqw4fa6B8m0b5OVrFe7mB9fp3-Gk7dZc0xWWsPlAQZEMNWiRNdBU4DEg=s1280-w1280-h800)
 
 【課題】
-- システムのディスプレイ設定で、拡大率が100%以外の場合に撮影座標がずれてしまう（Windows）
+- システムのディスプレイ設定で、拡大率が100%以外の場合に撮影座標がずれてしまう（Windows）  
+  → **V1.1 で改善**
 - スクロール可能領域の中にスクロール可能領域がある場合、中の領域が選択できない
-
 
 ---------
 
