--- a/content/posts/2025/2025-08-27.md
+++ b/content/posts/2025/2025-08-27.md
@@ -18,9 +18,7 @@ slug: 20250827
 Chrome拡張機能を自作していて、要素をスクリーンショットとしてキャプチャする処理を書いていたところ、**WindowsとMacで挙動が異なる問題**に遭遇しました。  
 同じコードでも **Windowsでは正しくキャプチャできないケース** があり、調べてみると「ディスプレイの拡大率」と「ブラウザのズーム倍率」の扱いがOSごとに違うのが原因でした。
 
-本記事では、私がハマった経緯と、最終的にどのように対処したかを紹介します。
-
----
+本記事では、私がハマった経緯と、最終的にどのような対処をしたかを紹介します。
 
 ## 背景
 今回のコードは、任意のDOM要素をキャプチャするために `canvas` を使ってスクリーンショットを生成するものです。  
@@ -28,54 +26,55 @@ GitHubに公開している拡張はこちらです：
 
 - [scroll_element_capture (GitHub)](https://github.com/KanoeGitHub/scroll_element_capture)
 
-キャプチャのために要素の座標やサイズを計算するのですが、**環境によって微妙にズレが生じる**ことがありました。
-
----
+キャプチャのために要素の座標やサイズを計算しています。当初開発はMacで行っていましたが、リリース後にWindows上で正常にキャプチャができないことが発覚したため、調べていました。
 
 ## 問題の発生
 試した環境は以下の通りです：
 
 - **Mac**: ディスプレイの拡大率 = 100%、ブラウザのズーム倍率 = 100% → 問題なし
-- **Windows**: ディスプレイの拡大率 = 150%、ブラウザのズーム倍率 = 100% → キャプチャ位置がずれる
+- **Windows**: ディスプレイの拡大率 = 125%、ブラウザのズーム倍率 = 100% → キャプチャ位置がずれる
 
 つまり、**Windowsではシステム側の拡大率（DPIスケーリング）が影響する**のです。
 
----
-
 ## 調査結果
+友人に相談したところ、Windowsの場合はシステム設定側の問題でズレることがあるとアドバイスをいただき、目星をつけることができました。
+
 JavaScriptから取得できる値を確認したところ：
 
 - `window.devicePixelRatio`  
-  → OSの拡大率（DPIスケーリング）を反映
+  → システムの拡大率（DPIスケーリング）を反映
 - `chrome.tabs.getZoom()` や `window.visualViewport.scale`  
   → ブラウザのズーム倍率を反映
 
-Macの場合は「ディスプレイ拡大率 = 100% 固定」なのでズレは起こりませんが、Windowsは **OS側の拡大率とブラウザズームの両方が絡む**ため、計算を分ける必要があることがわかりました。
-
----
+Macの場合はブラウザの拡大率のみ取得すれば問題ありません。（OS側でうまくやっているようです）  
+しかし、Windowsは **OS側の拡大率とブラウザズームの両方が絡む**ため、システム拡大率も反映した値を出す`window.devicePixelRatio`を使用する必要があると考えました。  
 
 ## 対応方法
-最終的に、**Windows環境ではOSの拡大率を考慮して計算**するように修正しました。  
+**Windows環境ではOSの拡大率を考慮した、"devicePixelRatio"を利用して算出することにしました。
 該当部分のコードは以下のようにしています（抜粋）：
 
 ```javascript
-const scale = window.devicePixelRatio;
-const zoom = await new Promise(resolve => {
-  chrome.tabs.getZoom(z => resolve(z));
-});
-
-// Windowsの場合は両方を掛け合わせて補正
-const effectiveScale = (isWindows ? scale * zoom : zoom);
+this.isWindows = /Windows/.test(navigator.userAgent);
+// Windowsの場合: devicePixelRatioを使用
+if (this.isWindows) {
+  const devicePixelRatio = window.devicePixelRatio;
+  if (devicePixelRatio && devicePixelRatio > 0) {
+    console.log('Windows detected, using devicePixelRatio:', devicePixelRatio);
+    return devicePixelRatio;
+  } else {
+    console.warn('devicePixelRatio not available, falling back to chrome.runtime.sendMessage');
+  }
+}
 ```
 
 これで、WindowsでもMacでもズレなくキャプチャできるようになりました。
 
 ## まとめ
-- Macではディスプレイの拡大率は常に100%、ズーム倍率のみ考慮すればOK
+- Macではブラウザのズーム倍率のみ考慮すればOK
 - Windowsではディスプレイ拡大率とズーム倍率の両方を考慮する必要あり
-- devicePixelRatio と chrome.tabs.getZoom() を組み合わせれば解決可能
 
-小さな違いですが、クロスプラットフォーム対応を考えると意外と重要なポイントでした。
+小さな違いですが、クロスプラットフォーム対応を考えると意外と重要なポイントでした。  
+"windows mac 拡張機能 座標"で検索してもなかなか出てこなかったので、記事作成しました。  
 同じように「スクショがズレる…」と悩んでいる方の参考になれば幸いです。
 
 ## 参考
