--- a/content/posts/2025/2025-08-27.md
+++ b/content/posts/2025/2025-08-27.md
@@ -1,5 +1,5 @@
 ---
-title: "WindowsとMacでのディスプレイ拡大率とブラウザ拡大率の違いにハマった話"
+title: "Chrome拡張機能_WindowsとMacでの拡大率の扱いの違いにハマった話"
 date: 2025-08-27
 categories:
 - "programming"
